--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: #f5dbfe;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #eceed2;
+    color: #918f8f;
     padding: 1rem 0;
     text-align: center;
 }
@@ -23,7 +23,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: #918f8f;
     text-decoration: none;
 }
 
@@ -49,7 +49,7 @@ footer {
 /* Dark Mode Styles */
 body.dark-mode {
     background-color: #2c3e50;
-    color: #ecf0f1;
+    color: #ffffff;
 }
 
 header.dark-mode {
